frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-frontend-ingress
  namespace: users-app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - tuapp.abrdns.com
    secretName: frontend-tls
  rules:
  - host: tuapp.abrdns.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: users-frontend
            port:
              number: 80
